Simple side med links til opgaver.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
 
     <!-- Titel som ses oppe i browserens tab mv. -->
-    <title>Sigende titel</title>
+    <title>Opagver Javascript</title>
 
     <!-- Metatags der fortæller at søgemaskiner er velkomne, hvem der udgiver siden og copyright information -->
     <meta name="robots" content="All">
@@ -26,6 +26,36 @@
 
 <!-- i <body> har man alt indhold på siden som brugeren kan se -->
 <body>
+
+
+<div class="site-wrap">
+    <h1 class="headliner">Links til opgaver</h1>
+
+    <ul class="nav">
+        <li> <a href="javascript_slide.php" class="btn">Javascript Slilde</a> </li>
+        <li> <a href="javascript_ajax.php" class="btn">Javascript Ajax</a> </li>
+        <li> <a href="javascript_clock.php" class="btn">Javascript Clock</a> </li>
+        <li> <a href="javascript_dropdown.php" class="btn">Javascript Dropdown</a> </li>
+        <li> <a href="javascript_drum.php" class="btn">Javascript Drum</a> </li>
+        <li> <a href="javascript_nav.php" class="btn">Javascript Sticky Nav</a> </li>
+        <li> <a href="javascript_panel_gallery.php" class="btn">Javascript Panel Gallery</a> </li>
+        <li> <a href="javascript_konami.php" class="btn">Javascript Konami Code</a> </li>
+    </ul>
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+
+
 
 <!-- Her skal sidens indhold ligge -->
 
