Tilføjede link til Github ups!

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li> <a href="javascript_nav.php" class="btn">Javascript Sticky Nav</a> </li>
         <li> <a href="javascript_panel_gallery.php" class="btn">Javascript Panel Gallery</a> </li>
         <li> <a href="javascript_konami.php" class="btn">Javascript Konami Code</a> </li>
+        <li> <a href="https://github.com/Bnop1146/Javascript_PHP" class="btn1">GitHub</a> </li>
     </ul>
 
 
